unpackaged/main/default/objects/PR_Detail__c/fields/Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments__c</fullName>
    <description>Finance team enters the comments why the line item is rejected</description>
    <label>Rejection Comments</label>
    <type>TextArea</type>
</CustomField>