unpackaged/main/default/objects/PR_Detail__c/fields/Required_Fields_Check__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields_Check__c</fullName>
    <formula>IF(
	OR(ISBLANK(Description__c),PR_Amount__c&lt;1,ISBLANK(TEXT(StartMonth__c)),ISBLANK(TEXT(EndMonth__c)),
	ISBLANK(TEXT(GLAccountType__c)),ISBLANK(TEXT(GL_Code2__c)),ISBLANK(TEXT(GLDescription2__c)),ISBLANK(GL_Details__c)),
	
	IMAGE("/resource/1575356823000/Cross_Mark", "Cross_Mark",20,20),
	IMAGE("/resource/1575356771000/Checked_Tick", "Checked_Tick",20,20)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Fields Check</label>
    <type>Text</type>
</CustomField>