unpackaged/main/default/objects/PR_Detail__c/fields/SAP_Company_Code_Matching__c.field-meta.xml
<CustomField>
    <fullName>SAP_Company_Code_Matching__c</fullName>
    <formula>SAP_Company_Code__c = PR_Header__r.SAP_Company_Code_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Company Code Matching?</label>
    <type>Checkbox</type>
</CustomField>