unpackaged/main/default/objects/PR_Detail__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IF(AND(OverAll_Status__c,Approved__c),
		IMAGE("/resource/1575356771000/Checked_Tick", "Checked_Tick",20,20),
		IMAGE("/resource/1575356823000/Cross_Mark", "Cross_Mark",20,20)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>