unpackaged/main/default/objects/PR_Detail__c/validationRules/Validate_End_Date_with_Today_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_End_Date_with_Today_Date</fullName>
    <active>true</active>
    <description>End month must be after start month and no later than December.</description>
    <errorConditionFormula>IF(AND($Permission.Bypass_PR_Validations,End_Date__c &lt; Today()), 
	ADDMONTHS(End_Date__c,1) &lt; Today(),
	End_Date__c &lt; Today()
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End month must be after start month and no later than December.</errorMessage>
</ValidationRule>